Added groups to main page board games added

--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,4 +1,7 @@
-<div *ngFor="let item of items;">
-    <button class="mat-fab" routerLink="category/{{item}}">
-       {{item}}</button>
+<div>
+    <button class="mat-fab" routerLink="Кухня">ЇСТИ</button>
+    <button class="mat-fab" routerLink="Бар">ПИТИ</button>
+    <button class="mat-fab" routerLink="Настільні_Ігри">НАСТІЛЬНІ ІГРИ</button>
 </div>
+
+<router-outlet></router-outlet>
