side bar fixed top panel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
-<app-top-panel
+<header>
+    <app-top-panel
     id="top-panel" 
     class="navbar navbar-dark fixed-top bg-dark">
 </app-top-panel>
-<router-outlet></router-outlet>
+</header>
+ 
+<body>
+<div>
+    <router-outlet class="outlet"></router-outlet>
+</div>
+
+    
+    
+</body>
