--- a/src/app/concrete-item/concrete-item.component.html
+++ b/src/app/concrete-item/concrete-item.component.html
@@ -13,6 +13,6 @@
         <button mat-button color="primary" (click)="onIncreaseClicked()">+</button>
         <button mat-button color="primary" (click)="onAddToCartClicked()">Додати</button>
       </mat-action-row>
-    <p id="description">description: {{productDescription}}</p>
+    <p id="description">{{productDescription}}</p>
 </mat-expansion-panel>
     
