embedded menu data

--- a/src/app/category-item/category-item.component.html
+++ b/src/app/category-item/category-item.component.html
@@ -1,4 +1,4 @@
-<h1>{{itemName}}</h1>
+<h1 id="head">{{itemName}}</h1>
 <div *ngFor="let product of products">
     <div>
         <app-concrete-item productDescription = {{product.description}} productPrice = {{product.price}} productName = {{product.name}}></app-concrete-item>
