--- a/src/app/menu-group/menu-group.component.css
+++ b/src/app/menu-group/menu-group.component.css
@@ -3,3 +3,20 @@
     background: rgb(31, 13, 13);
     min-height: 700px;
   }
+
+#toggle {
+  width: 80px;
+  height: 70px;
+  background-color: rgb(138, 222, 228);
+  box-shadow: 0 6px 10px 0 #666;
+  transition: all 0.1s ease-in-out;
+
+  font-size: 50px;
+  color: rgb(63, 27, 27);
+  text-align: center;
+  line-height: 70px;
+
+  position: fixed;
+  left: 50px;
+  bottom: 50px;
+}
