--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,16 +1,18 @@
-
+<body>
+    
 <mat-list>
     <mat-list-item>
-        <button class="center" mat-stroked-button color="accent" routerLink="Кухня">ЇСТИ</button>
+        <button class="center" mat-stroked-button routerLink="Кухня">ЇСТИ</button>
     </mat-list-item>
     <mat-divider></mat-divider>
     <mat-list-item>
-        <button class="center" mat-stroked-button  color="primary" routerLink="Бар">ПИТИ</button>
+        <button class="center" mat-stroked-button routerLink="Бар">ПИТИ</button>
     </mat-list-item>
     <mat-divider></mat-divider>
     <mat-list-item>
-        <button  class="center" mat-stroked-button  color="primary" routerLink="Настільні_Ігри">НАСТІЛЬНІ ІГРИ</button>
+        <button class="center" mat-stroked-button routerLink="Настільні_Ігри">НАСТІЛЬНІ ІГРИ</button>
     </mat-list-item>
   </mat-list>
 
 <router-outlet></router-outlet>
+</body>
