--- a/src/app/menu-group/menu-group.component.html
+++ b/src/app/menu-group/menu-group.component.html
@@ -1,14 +1,14 @@
-<mat-drawer-container class="example-container">
+<mat-drawer-container class="concrete-items-container">
   <mat-drawer #drawer class="side-container" mode="side" opened>
     <div *ngFor="let category of categories">
-      <button class="mat-stroked-button" (click)="drawer.toggle()" routerLink="{{ category }}">
+      <button mat-stroked-button (click)="drawer.toggle()" routerLink="{{ category }}">
         {{ category }}
       </button>
     </div>
   </mat-drawer>
   <mat-drawer-content>
     <router-outlet></router-outlet>
-      <button id="toggle" type="button" mat-button (click)="drawer.toggle()">
+      <button mat-stroked-button id="toggle" type="button" mat-button (click)="drawer.toggle()">
         >
       </button>
   </mat-drawer-content>
