--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -1,9 +1,9 @@
-<a class="navbar-brand center">
+<a class="center">
   <span class="logo logo-left">JR</span>
   <span class="logo logo-right">Меню</span>
 </a>
-<a class="nav-link" routerLink="">
-  <button id="back">Назад</button>
-</a>
+<button mat-stroked-button id="back" routerLink="">Назад</button>
 
-<button id="cart" routerLink="my-order">Моє замовлення</button>
+<button mat-stroked-button id="cart" routerLink="my-order">
+  Моє замовлення
+</button>
