--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
 #top-panel {
-  background-color: #161a1e !important;
+  background-color: #161a1e;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.25);
   position: fixed;
   z-index: 1000;
-  width: 2000px;
+  width: 1000px;
 }
-header{
-    padding-bottom: 35px;
+body{
+    padding-top: 35px;
 }
