--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
-<header>
-    <app-top-panel
-    id="top-panel" 
-    class="navbar navbar-dark fixed-top bg-dark">
-</app-top-panel>
-</header>
- 
+<app-top-panel id="top-panel"> </app-top-panel>
 <body>
-<div>
+  <div>
     <router-outlet class="outlet"></router-outlet>
-</div>
-
-    
-    
+  </div>
 </body>
