--- a/src/app/menu-group/menu-group.component.css
+++ b/src/app/menu-group/menu-group.component.css
@@ -1,22 +1,26 @@
-.example-container {
+.concrete-items-container {
     position: relative;
-    background: rgb(31, 13, 13);
-    min-height: 700px;
+    min-height: 900px;
+    background-color: #1C2228;
   }
+.side-container{
+  background-color: #1c2228f6;
+  color: bisque;
+}
 
 #toggle {
   width: 80px;
   height: 70px;
-  background-color: rgb(138, 222, 228);
-  box-shadow: 0 6px 10px 0 #666;
+  background-color: rgba(3, 212, 178, 0.322);
+  box-shadow: 0 6px 10px 0 rgba(102, 102, 102, 0.295);
   transition: all 0.1s ease-in-out;
 
   font-size: 50px;
-  color: rgb(63, 27, 27);
+  color: rgb(212, 203, 203);
   text-align: center;
   line-height: 70px;
-
+  
   position: fixed;
-  left: 50px;
-  bottom: 50px;
+  left: 25px;
+  bottom: 25px;
 }
