+ descriptions zero cost items invisible zero amount items not being added to cart

--- a/src/app/concrete-item/concrete-item.component.css
+++ b/src/app/concrete-item/concrete-item.component.css
@@ -25,6 +25,8 @@ mat-panel-description {
 }
 p {
   color: blanchedalmond;
+  padding-left: 10px;
+  padding-right: 4px;
 }
 button {
     background-color: #BE6060;
