--- a/src/app/concrete-item/concrete-item.component.html
+++ b/src/app/concrete-item/concrete-item.component.html
@@ -4,7 +4,7 @@
             {{productName}}
         </mat-panel-title>
         <mat-panel-description>
-            {{productPrice}}
+            {{productPrice}} грн.
         </mat-panel-description>
     </mat-expansion-panel-header>
     <mat-action-row class="action">
