--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -4,11 +4,11 @@
     <mat-list-item>
         <button class="center" mat-stroked-button routerLink="Кухня">ЇСТИ</button>
     </mat-list-item>
-    <mat-divider></mat-divider>
+    <div></div>
     <mat-list-item>
         <button class="center" mat-stroked-button routerLink="Бар">ПИТИ</button>
     </mat-list-item>
-    <mat-divider></mat-divider>
+    <div></div>
     <mat-list-item>
         <button class="center" mat-stroked-button routerLink="Настільні_Ігри">НАСТІЛЬНІ ІГРИ</button>
     </mat-list-item>
